# saku

./: .gitignore  Cargo.toml  Dockerfile  Saku.sln  database.sqlite  docker-compose.yml
Saku/: Dockerfile  Program.cs  Saku.csproj  config.json
Saku/Adapters/: OpenIaAdapter.cs
Saku/Database/: AppDbContextFactory.cs  SakuDbContext.cs
Saku/Events/: InteractionCreatedEvent.cs  LogEvent.cs  MessageCreatedEvent.cs  ReadyEvent.cs
Saku/Exceptions/: DuplicationException.cs
Saku/Extensions/: ServiceCollectionExtensions.cs
Saku/Mappers/: ChannelModelToChannelViewModelMapper.cs  ChannelRegisterViewModelToChannelModelMapper.cs  ChatContextModelToChatMessageViewModel.cs  ChatContextModelToChatMessageViewModelMapper.cs  ChatMessageViewModelToChatContextModelMapper.cs  InputChatMessageViewModelToChatMessageViewModelMapper.cs  UserModelToUserViewModelMapper.cs  UserRegisterViewModelToUserModelMapper.cs
Saku/Migrations/: 20230624235740_Add Context Table.Designer.cs  20230624235740_Add Context Table.cs  20230625000833_Add Index in ChatContext.IsPresentInCurrentContext.Designer.cs  20230625000833_Add Index in ChatContext.IsPresentInCurrentContext.cs  20230625002307_Add User Table.Designer.cs  20230625002307_Add User Table.cs  20230625002837_Add Foreing Key ChatContext-Users.Designer.cs  20230625002837_Add Foreing Key ChatContext-Users.cs  (+7 more)
migrations/: 20230327233425_initial.sql  20230426162024_setsystem.sql  20230429004122_multiplier.sql  20230502220947_create_user.sql  20230506020840_long_message.sql
src/: chat.rs  configs.rs  database.rs  main.rs  models.rs
(+60 files in other folders)
