[package]
name = "saku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
dotenv = "0.15.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
openai = "1.0.0-alpha.7"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "migrate",
    "sqlite",
    "macros",
] }
