[package]
name = "saku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
# serenity = { version = "0.11.5", default-features = false, features = [
#     "client",
#     "gateway",
#     "rustls_backend",
#     "model",
# ] }
dotenv = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.96"
openai = "1.0.0-alpha.8"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "migrate",
    "mysql",
] }
num_enum = "0.6.0"
poise = "0.5.2"
figment = { version = "0.10.8", features = ["env"] }
chrono = "0.4.24"
cuid2 = "0.1.0"
itertools = "0.10.5"
reqwest = {version = "0.11.16", features = ["json"]}
